# testDemoSite

./: pyproject.toml
pages/: base_page.py  index_page.py  index_page_locators.py  register_page.py  register_page_locators.py  register_success_page.py  register_success_page_locators.py
test/: conftest.py  test_login.py
